Enable ASM8_EXPERIMENTAL for Java 14 record support
Closes gh-24722