@@ -27,11 +27,6 @@
 // THE POSSIBILITY OF SUCH DAMAGE.
 package org.springframework.asm;
 
-import java.io.DataInputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.util.regex.Pattern;
-
 /**
  * Defines additional JVM opcodes, access flags and constants which are not part of the ASM public
  * API.
@@ -61,8 +56,7 @@ final class Constants implements Opcodes {
   static final String RUNTIME_VISIBLE_ANNOTATIONS = "RuntimeVisibleAnnotations";
   static final String RUNTIME_INVISIBLE_ANNOTATIONS = "RuntimeInvisibleAnnotations";
   static final String RUNTIME_VISIBLE_PARAMETER_ANNOTATIONS = "RuntimeVisibleParameterAnnotations";
-  static final String RUNTIME_INVISIBLE_PARAMETER_ANNOTATIONS =
-      "RuntimeInvisibleParameterAnnotations";
+  static final String RUNTIME_INVISIBLE_PARAMETER_ANNOTATIONS = "RuntimeInvisibleParameterAnnotations";
   static final String RUNTIME_VISIBLE_TYPE_ANNOTATIONS = "RuntimeVisibleTypeAnnotations";
   static final String RUNTIME_INVISIBLE_TYPE_ANNOTATIONS = "RuntimeInvisibleTypeAnnotations";
   static final String ANNOTATION_DEFAULT = "AnnotationDefault";
@@ -181,41 +175,4 @@ final class Constants implements Opcodes {
   static final int ASM_GOTO_W = 220;
 
   private Constants() {}
-
-  static void checkAsm8Experimental(final Object caller) {
-    Class<?> callerClass = caller.getClass();
-    String internalName = callerClass.getName().replace('.', '/');
-    if (!isWhitelisted(internalName)) {
-      checkIsPreview(callerClass.getClassLoader().getResourceAsStream(internalName + ".class"));
-    }
-  }
-
-  static boolean isWhitelisted(final String internalName) {
-    if (!internalName.startsWith("org/objectweb/asm/")) {
-      return false;
-    }
-    String member = "(Annotation|Class|Field|Method|Module|RecordComponent|Signature)";
-    return internalName.contains("Test$")
-        || Pattern.matches(
-            "org/objectweb/asm/util/Trace" + member + "Visitor(\\$.*)?", internalName)
-        || Pattern.matches(
-            "org/objectweb/asm/util/Check" + member + "Adapter(\\$.*)?", internalName);
-  }
-
-  static void checkIsPreview(final InputStream classInputStream) {
-    if (classInputStream == null) {
-      throw new IllegalStateException("Bytecode not available, can't check class version");
-    }
-    int minorVersion;
-    try (DataInputStream callerClassStream = new DataInputStream(classInputStream); ) {
-      callerClassStream.readInt();
-      minorVersion = callerClassStream.readUnsignedShort();
-    } catch (IOException ioe) {
-      throw new IllegalStateException("I/O error, can't check class version", ioe);
-    }
-    if (minorVersion != 0xFFFF) {
-      throw new IllegalStateException(
-          "ASM8_EXPERIMENTAL can only be used by classes compiled with --enable-preview");
-    }
-  }
 }
